<resources>
    <string name="app_name">Saf-Norteno</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
<string name="permdesc_deadlyActivity">REQUEST_READ_PHONE_STATE </string>
    <string name="val">N:</string>
    <string name="nreg">C:</string>
    <string name="ins">Ins</string>
    <string name="act">Act</string>
    <string name="elim">Elim</string>
    <string name="cons">Cons</string>

    <string name="action_settings">Settings</string>
    <string name="menu_remove">Remove</string>
    <string name="content_open_popup">Open Popup Menu</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_iniciosesion">Iniciar sesiòn</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Usuario</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Iniciar</string>
    <string name="action_sign_in_short">Iniciar sesiòn</string>
    <string name="error_invalid_email">Usuario invalido</string>
    <string name="error_invalid_password">Contraseña invalida</string>
    <string name="error_incorrect_password">Esta contraseña es incorrecta</string>
    <string name="error_field_required">Este campo es requerido</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_cliente_opciones">ClienteOpciones</string>
    <string name="button_Parametros">Parámetros Usuario</string>
    <string name="button_Clientes">  Consultar   Clientes</string>
    <string name="title_activity_pantalla_usuario">PantallaUsuario</string>
    <string name="guardarUsuarioTitle">Grabar Parámetros Usuario</string>
    <string name="button_Pedidos">Pedidos Clientes</string>
    <string name="button_Sincronizacion">Sincronización</string>
    <string name="labelIdUsuario">Id. Usuario:</string>
    <string name="textIdUsuario">0</string>
    <string name="labelNombreUsuario">Nombre Usuario:</string>
    <string name="textNombreUsuario" />
    <string name="labelEmailUsuario">Email:</string>
    <string name="textEmailUsuario" />
    <string name="labelPasswordUsuario">Contraseña:</string>
    <string name="textPasswordUsuario" />
    <string name="muestraPasswordUsuario">Mostrar Contraseña</string>
    <string name="labelIdEmpresaUsuario">Id. Empresa:</string>
    <string name="textIdEmpresaUsuario">0</string>
    <string name="labelObservUsuario">Observaciones:</string>
    <string name="textObservUsuario" />
    <string name="buttonAceptarUsuario">Guardar</string>
    <string name="buttonCancelarUsuario">Cancelar</string>
    <string name="title_person_list">People</string>
    <string name="title_person_detail">Person Detail</string>
    <string name="title_pantallacliente_list">Clientes</string>
    <string name="title_pantallacliente_detail">PantallaCliente Detail</string>
    <string name="title_activity_pantalla_cliente">Consultas Clientes</string>
    <string name="guardarUsuarioMensaje">¿Desea Grabar los Datos del Usuario?</string>
    <string name="afirmar">Sí</string>
    <string name="negar">No</string>
    <string name="aceptar">Aceptar</string>
    <string name="msgUsuarioInsertado">Usuario Insertado</string>
    <string name="msgUsuarioModificado">Usuario Modificado</string>
    <string name="cancelarUsuarioTitle">Cancelar Parámetros Usuario</string>
    <string name="cancelarUsuarioMensaje">¿Desea No Grabar los datos del usuario?</string>
    <string name="msgUsuarioCancelado">Grabación de datos usuario cancelada. No se grabará ningún dato.</string>
    <string name="msgUsuarioContinua">Puede continuar modificando los Datos del Usuario.</string>
    <string name="lClientesNombre">Nombre Cliente:</string>
    <string name="bClientesBuscar">Buscar</string>
    <string name="lClientesCliente">Cliente:</string>
    <string name="lClientesDireccion">Direccion:</string>
    <string name="lClientesPoblacion">Población:</string>
    <string name="lClientesProvincia">Provincia:</string>
    <string name="lClientesTelefonos">Teléfonos:</string>
    <string name="lClientesEmail">E-mail:</string>
    <string name="lClientesFormaPago">Forma de pago:</string>
    <string name="lClientesObservaciones">Observaciones:</string>
    <string name="msgClienteSeleccionado">Ha selecccionado el cliente:</string>
    <string name="title_activity_controlador_pedido">Pedidos</string>
    <string name="lPedidoPedido">Pedido:</string>
    <string name="lFechaPedido">Fecha:</string>
    <string name="lFechaServicio">Servicio:</string>
    <string name="lFechaEnviado">Enviado:</string>
    <string name="lButMas">+</string>
    <string name="lButMenos">-</string>
    <string name="labLineasPedidos">Líneas Pedido</string>
    <string name="msgClienteNoSeleccionado">No se ha seleccionado ningún cliente</string>
    <string name="msgPedidoSeleccionado">Ha seleccionado el pedido: </string>
    <string name="guardarPedidoTitle">Guardar Pedido</string>
    <string name="guardarPedidoMensaje">¿Desea guardar el pedido?</string>
    <string name="msgContinuarModificando">Puede continuar modificando</string>
    <string name="cancelarPedidoTitle">Cancelar Pedido</string>
    <string name="cancelarPedidoMensaje">¿Desea No Grabar los datos del pedido?</string>
    <string name="msgPedidoCancelado">Grabación de datos pedido cancelada. No se grabará ningún dato.</string>
    <string name="msgPedidoContinua">Puede seguir grabando los datos del pedido.</string>
    <string name="msgPedidoInsertado">Pedido Insertado</string>
    <string name="msgPedidoModificado">Pedido Modificado</string>
    <string name="msgPedidoBorrado">Pedido Borrado</string>
    <string name="borrarPedidoTitle">Borrar Pedido</string>
    <string name="borrarPedidoMensaje">¿Desea Eliminar los datos del pedido?</string>
    <string name="msgPedidoNoGrabado">El pedido no ha sido grabado. No se puede modificar o dar de baja.</string>
    <string name="labLineasPedidosLinea">Linea Pedido:</string>
    <string name="title_activity_controlador_pedido_linea">Lineas Pedidos</string>
    <string name="labCantidadLinea">Cantidad:</string>
    <string name="labImporteLinea">Importe:</string>
    <string name="guardarLineaTitle">Guardar Linea de Pedido</string>
    <string name="guardarLineaMensaje">¿Desea Guardar la Linea de Pedido?</string>

    <string name="msgArticuloSeleccionado">Linea Insertada</string>

    <string name="msgLineaModificada">Linea Modificada</string>
    <string name="cancelarLineaTitle">Cancelar Linea</string>
    <string name="cancelarLineaMensaje">¿Desea No Grabar los Datos de la Linea?</string>
    <string name="msgLineaCancelada">Grabación de datos linea cancelada. No se grabará ningún dato.</string>
    <string name="msgLineaContinua">Puede seguir grabando los datos de la linea.</string>
    <string name="lTotalPedido">Total Pedido: </string>
    <string name="labImportePedido">Importe:</string>
    <string name="lButMod">M</string>
    <string name="labLineaSeleccionada">Linea Seleccionada:</string>
    <string name="msgLineaSeleccionada">Ha seleccionado la linea: </string>
    <string name="msgLineaNoGrabada">El pedido  o la linea no ha sido grabado. No se puede modifcar o dar de baja.</string>
    <string name="borrarLineaTitle">Borrar Pedido / Linea</string>
    <string name="borrarLineaMensaje">¿Desea Eliminar los datos de la linea?</string>
    <string name="msgLineaBorrada">Linea Borrada </string>
    <string name="msgClienteNoExiste">El cliente no existe. No se grabará el pedido.</string>
    <string name="title_activity_controlador_sincronizacion">Sincronización</string>
    <string name="hello_world">Hello world!</string>
    <string name="lRecibirDatos">Recibir Datos</string>
    <string name="lEnviarDatos">Enviar Datos</string>
    <string name="labRecibirClientes">Clientes</string>
    <string name="labEnviarDatos">Enviar Datos</string>
    <string name="labEnviarPedidos">Pedidos</string>
    <string name="labEnviarLineas">Líneas Pedidos</string>
    <string name="btSincronizar">Sincronizar</string>
    <string name="labRegistroRecibir">Registro de datos recibidos</string>
    <string name="labRegistroEnviar">Registro de datos enviados</string>
    <string name="msgFinSincronizar">Fin de Sincronización</string>
    <string name="msgInicio">Inicio</string>
    <string name="msgFin">Fin</string>
    <string name="msgArticulosRecibir">Articulos a Recibir</string>
    <string name="msgRecibiendoArticulos">Recibiendo Articulos ...</string>
    <string name="msgFicheroRecibir">Fichero a Recibir</string>
    <string name="msgFicheroEnviar">Fichero a Enviar</string>
    <string name="msgClientesRecibir">Clientes a Recibir </string>
    <string name="msgRecibiendoClientes">Recibiendo Clientes ...</string>
    <string name="msgEnviandoPedidos">Enviando Pedidos ...</string>
    <string name="msgPedidosEnviar">Pedidos a Enviar </string>
    <string name="msgPedidoEnviado">El pedido ha sido enviado. No se puede modificar.</string>


</resources>
