<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".app.ControladorArticulo" >

    <TextView
        android:id="@+id/lTituloSincronizacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_Sincronizacion"
        android:textColor="#000000"
        android:textSize="20dp"
        android:textStyle="bold" />

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="800dp"
      android:layout_alignParentLeft="true"
      android:layout_alignParentRight="true"
      android:layout_below="@+id/lTituloSincronizacion"
      android:gravity="top"
      android:orientation="vertical"
      tools:ignore="UselessParent" >

      <View
          android:layout_width="match_parent"
          android:layout_height="5dp"
          android:background="#0000FF" />

      <TextView
          android:id="@+id/lTituloRecibirDatos"
          android:layout_width="match_parent"
          android:layout_height="25dp"
          android:text="@string/lRecibirDatos"
          android:textColor="#000000"
          android:textSize="18dp"
          android:textStyle="bold" />

      <TableLayout
          android:layout_width="match_parent"
          android:layout_height="115dp" >

          <TableRow
              android:id="@+id/tableRow2Sinc"
              android:layout_width="wrap_content"
              android:layout_height="55dp" >

              <LinearLayout
                  android:layout_width="wrap_content"
                  android:layout_height="55dp" >

                  <TextView
                      android:id="@+id/lRecibirArticulos"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="Articulos"
                      android:textAppearance="?android:attr/textAppearanceMedium"
                      android:textSize="20dp" />

                  <ProgressBar
                      android:id="@+id/pbArticulos"
                      style="?android:attr/progressBarStyleHorizontal"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content" />

              </LinearLayout>

          </TableRow>
         <TableRow
              android:id="@+id/tableRow5Sinc"
              android:layout_width="wrap_content"
              android:layout_height="55dp" >

              <LinearLayout
                  android:layout_width="wrap_content"
                  android:layout_height="55dp" >

                  <TextView
                      android:id="@+id/lRecibirLog"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_weight="0.21"
                      android:text="@string/labRegistroRecibir"
                      android:textAppearance="?android:attr/textAppearanceMedium"
                      android:textSize="20dp"
                      tools:ignore="InefficientWeight" />

              </LinearLayout>

          </TableRow>
          
      </TableLayout>

      <EditText
          android:id="@+id/logRecibirDatos"
          android:layout_width="match_parent"
          android:layout_height="65dp"
          android:ems="10"
          android:inputType="textMultiLine" />

      <View
          android:layout_width="match_parent"
          android:layout_height="5dp"
          android:background="#0000FF" />

      <TextView
          android:id="@+id/lTituloEnviarDatos"
          android:layout_width="match_parent"
          android:layout_height="19dp"
          android:text="@string/lEnviarDatos"
          android:textColor="#000000"
          android:textSize="18dp"
          android:textStyle="bold" />

      <TableLayout
          android:layout_width="match_parent"
          android:layout_height="120dp" >

          <TableRow
              android:id="@+id/tableRow3Sinc"
              android:layout_width="wrap_content"
              android:layout_height="45dp" >

              <LinearLayout
                  android:layout_width="wrap_content"
                  android:layout_height="45dp" >

                  <TextView
                      android:id="@+id/lEnviarPedidos"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/labEnviarPedidos"
                      android:textAppearance="?android:attr/textAppearanceMedium"
                      android:textSize="20dp" />

                  <ProgressBar
                      android:id="@+id/pbPedidos"
                      style="?android:attr/progressBarStyleHorizontal"
                      android:layout_width="270dp"
                      android:layout_height="wrap_content" />
              </LinearLayout>
          </TableRow>

          <TableRow
              android:id="@+id/tableRow4Sinc"
              android:layout_width="wrap_content"
              android:layout_height="45dp" >

              <LinearLayout
                  android:layout_width="wrap_content"
                  android:layout_height="45dp" >

                  <TextView
                      android:id="@+id/lEnviarLineas"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/labEnviarLineas"
                      android:textAppearance="?android:attr/textAppearanceMedium"
                      android:textSize="20dp" />

                  <ProgressBar
                      android:id="@+id/pbLineas"
                      style="?android:attr/progressBarStyleHorizontal"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content" />

              </LinearLayout>
          </TableRow>
         <TableRow
              android:id="@+id/tableRow6Sinc"
              android:layout_width="wrap_content"
              android:layout_height="45dp" >

              <LinearLayout
                  android:layout_width="wrap_content"
                  android:layout_height="45dp" >

                  <TextView
                      android:id="@+id/lEnviarLog"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/labRegistroEnviar"
                      android:textAppearance="?android:attr/textAppearanceMedium"
                      android:textSize="20dp" />
              </LinearLayout>

          </TableRow>
          
      </TableLayout>

      <EditText
          android:id="@+id/logEnviarDatos"
          android:layout_width="match_parent"
          android:layout_height="65dp"
          android:ems="10"
          android:inputType="textMultiLine"
          tools:ignore="InefficientWeight" />

      <View
          android:layout_width="match_parent"
          android:layout_height="5dp"
          android:background="#0000FF" />

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="45dp"
          android:orientation="vertical" >

          <Button
              android:id="@+id/butSincronizar"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:onClick="sincronizar"
              android:text="@string/btSincronizar" />

      </LinearLayout>

  </LinearLayout>
</RelativeLayout>